WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48947
Crash when layout in response to setSize changes the drawing area
https://bugs.webkit.org/show_bug.cgi?id=48947
Summary
Crash when layout in response to setSize changes the drawing area
Anders Carlsson
Reported
2010-11-03 13:29:03 PDT
Crash when layout in response to setSize changes the drawing area
Attachments
Patch
(2.81 KB, patch)
2010-11-03 13:29 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-03 13:29:35 PDT
Created
attachment 72860
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-11-03 13:32:51 PDT
Comment on
attachment 72860
[details]
Patch r=me but a testcase would be nice.
Anders Carlsson
Comment 3
2010-11-03 13:36:28 PDT
Committed
r71261
: <
http://trac.webkit.org/changeset/71261
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug