Crash when layout in response to setSize changes the drawing area https://bugs.webkit.org/show_bug.cgi?id=48947

Reviewed by Simon Fraser.

This is tested by compositing/plugins/small-to-large-composited-plugin.html.

* WebProcess/WebPage/ChunkedUpdateDrawingArea.cpp:
(WebKit::ChunkedUpdateDrawingArea::setSize):
* WebProcess/WebPage/LayerBackedDrawingArea.cpp:
(WebKit::LayerBackedDrawingArea::setSize):

Canonical link: https://commits.webkit.org/61754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71261 268f45cc-cd09-0410-ab3c-d52691b4dbfc